# pymdvar

./: ChangeLog  README.md  pyproject.toml  requirements_dev.txt  setup.cfg
pymdvar/: __init__.py  pymdvar.py
src/pymdvar/: pymdvar.py
tests/: test_pymdvar.py
