[metadata]
name = pymdvar
author = David Luevano Alvarado
author_email = david@luevano.xyz
summary = Python-Markdown extension to insert variables
description_file = README.md
license = GPLv3
home_page = https://github.com/luevano/pymdvar
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Operating System :: Unix
	Topic :: Text Processing :: Markup :: HTML
	Topic :: Text Processing :: Markup :: Markdown
keywords =
	python
	markdown

[files]
packages =
	pymdvar

[bdist_wheel]
universal = 0

[options]
packages = find:
include_package_data=True
