[metadata]
name = pymdvar
author = David Luevano Alvarado
author_email = david@luevano.xyz
summary = Python-Markdown extension to insert variables
description_file = README.md
license = GPLv3
home_page = https://github.com/luevano/pymdvar
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Operating System :: Unix
	Topic :: Text Processing :: Markup :: HTML
	Topic :: Text Processing :: Markup :: Markdown
keywords =
	python
	markdown

[files]
packages =
	pymdvar

[bdist_wheel]
universal = 0

[options]
package_dir =
	= src
packages = find:
include_package_data=True

[options.packages.find]
where = src

[options.package_data]
pymdvar = py.typed

[flake8]
max-line-length = 80
per-file-ignores =
	__init__.py: W292